[fix] Squishy buttons - only target a.btn

--- a/app/templates/bmc/css/group.less
+++ b/app/templates/bmc/css/group.less
@@ -440,11 +440,17 @@ body.panel-open {
 	margin-bottom: 25px !important;
 }
 
-// a,
-// a:active,
-// a:visited {
-// 	font-family: inherit;
-// }
+a,
+a:active,
+a:visited {
+	font-family: inherit;
+}
+
+a.btn,
+a.btn:active,
+a.bth:visited {
+	font-family: @fontGeometric;
+}
 /* END: Supergroup template fixes */
 
 // Powered by color wheel animation
